unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/FSL__Territory_Optimization_Request__c.object-meta.xml
<CustomObject>
    <label>Territory Optimization Request</label>
    <nameField>
        <displayFormat>LOR-{00000}</displayFormat>
        <label>Territory Optimization Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Optimization Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>