unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__AvgResponseTimeForSasWithWindowAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__AvgResponseTimeForSasWithWindowAfter__c</fullName>
    <description>Average response time after optimization (with arrival window).</description>
    <label>Response Time After (with Window)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>