unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__AvgResponseTimeForSasWithWindowBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__AvgResponseTimeForSasWithWindowBefore__c</fullName>
    <description>Average response time before optimization (with arrival window).</description>
    <label>Response Time Before (with Window)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>