unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__AvgResponseTimeForSasWoWindowAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__AvgResponseTimeForSasWoWindowAfter__c</fullName>
    <description>Average response time after optimization (without arrival window).</description>
    <label>Response Time After (without Window)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>