unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__AvgResponseTimeForSasWoWindowBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__AvgResponseTimeForSasWoWindowBefore__c</fullName>
    <description>Average response time before optimization (without arrival window).</description>
    <label>Response Time Before (without Window)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>