unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__AvgTravelTimeWithoutHomeAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__AvgTravelTimeWithoutHomeAfter__c</fullName>
    <label>Avg Travel Per Service w/o Home After</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>