unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NonCapacityBasedServicesAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__NonCapacityBasedServicesAfter__c</fullName>
    <label>Non Capacity Based Services After</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>