unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumberOfSasSchedToPreferredSrAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumberOfSasSchedToPreferredSrAfter__c</fullName>
    <description>Appointments assigned to preferred resources after optimization.</description>
    <label>Preferred Resource Appointments After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>