unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumberOfSasSchedToPreferredSrBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumberOfSasSchedToPreferredSrBefore__c</fullName>
    <description>Appointments assigned to preferred resources before optimization.</description>
    <label>Preferred Resource Appointments Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>