unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumberOfSasWithPreferredResource__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumberOfSasWithPreferredResource__c</fullName>
    <description>Total appointments assigned to preferred resources.</description>
    <label>Preferred Resource Assigned Appointments</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>