unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumberOfUnscheduledCapacityAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumberOfUnscheduledCapacityAfter__c</fullName>
    <description>Other refers to capacity-based resources.</description>
    <label>Other Unscheduled Resources After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>