unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumberOfUnscheduledCrewBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumberOfUnscheduledCrewBefore__c</fullName>
    <label>Unscheduled Crews Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>