unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumberOfUnscheduledResourcesAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumberOfUnscheduledResourcesAfter__c</fullName>
    <label>Unscheduled Resources After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>