unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumberOfUnscheduledResourcesBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumberOfUnscheduledResourcesBefore__c</fullName>
    <label>Unscheduled Resources Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>