unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumOfScheduledSasToCapacityAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumOfScheduledSasToCapacityAfter__c</fullName>
    <description>Appointments assigned to capacity-based resources after optimization.</description>
    <label>Other Assigned Appointments After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>