unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumOfScheduledSasToCapacityBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumOfScheduledSasToCapacityBefore__c</fullName>
    <description>Appointments assigned to capacity-based resources before optimization.</description>
    <label>Other Assigned Appointments Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>