unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumOfScheduledSasToCrewAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumOfScheduledSasToCrewAfter__c</fullName>
    <label>Appointments Assigned to Crews After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>