unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumOfScheduledSasToCrewBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumOfScheduledSasToCrewBefore__c</fullName>
    <label>Appointments Assigned to Crews Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>