unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumOfScheduledSasToResourcesAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumOfScheduledSasToResourcesAfter__c</fullName>
    <description>Appointments assigned to resources after optimization.</description>
    <label>Resource Assigned Appointments After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>