unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__NumOfScheduledSasToResourcesBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__NumOfScheduledSasToResourcesBefore__c</fullName>
    <description>Appointments assigned to resources before optimization.</description>
    <label>Resource Assigned Appointments Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>