unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>FSL__ServiceTerritory__c</fullName>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Territory Optimization Requests</relationshipLabel>
    <relationshipName>Territory_Optimization_Requests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>