unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalLunchBreakDurationAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalLunchBreakDurationAfter__c</fullName>
    <label>Lunch Break After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>