unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalLunchBreakDurationBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalLunchBreakDurationBefore__c</fullName>
    <label>Lunch Break Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>