unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalNaWithGeolocationDurationAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalNaWithGeolocationDurationAfter__c</fullName>
    <label>Non Availability With Travel After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>