unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalNaWithGeolocationDurationBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalNaWithGeolocationDurationBefore__c</fullName>
    <label>Non Availability With Travel Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>