unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalNaWoGeolocationDurationBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalNaWoGeolocationDurationBefore__c</fullName>
    <label>Non Availability Without Travel Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>