unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalNumberOfCrews__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalNumberOfCrews__c</fullName>
    <label>Number Of Crews</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>