unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalNumberOfPinnedServices__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalNumberOfPinnedServices__c</fullName>
    <label>Pinned Appointments</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>