unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalNumberOfResources__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalNumberOfResources__c</fullName>
    <label>Number of Resources</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>