unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalNumberOfServicesWithoutWindow__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalNumberOfServicesWithoutWindow__c</fullName>
    <label>Appointments Without Arrival Window</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>