unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalNumberOfServicesWithWindow__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalNumberOfServicesWithWindow__c</fullName>
    <label>Appointments With Arrival Window</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>