unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalOvertimeForCrews__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalOvertimeForCrews__c</fullName>
    <label>Crews Overtime</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>