unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalOvertimeForResources__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalOvertimeForResources__c</fullName>
    <label>Resources Overtime</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>