unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalScheduledTimeOnOvertimeAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalScheduledTimeOnOvertimeAfter__c</fullName>
    <label>Scheduled Overtime After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>