unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalScheduledTimeOnOvertimeBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalScheduledTimeOnOvertimeBefore__c</fullName>
    <label>Scheduled Overtime Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>