unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalTravelByPrimaryMembershipAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalTravelByPrimaryMembershipAfter__c</fullName>
    <label>Total Travel By Primary STM After</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>