unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalTravelByPrimaryMembershipBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalTravelByPrimaryMembershipBefore__c</fullName>
    <label>Total Travel By Primary STM Before</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>