unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalTravelDistanceFromHomebaseAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalTravelDistanceFromHomebaseAfter__c</fullName>
    <label>Distance from Homebase After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>