unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalTravelDistanceWoHomebaseAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalTravelDistanceWoHomebaseAfter__c</fullName>
    <label>Distance Between Appointments After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>