unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalTravelDistanceWoHomebaseBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalTravelDistanceWoHomebaseBefore__c</fullName>
    <label>Distance Between Appointments Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>