unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalTravelTimeAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalTravelTimeAfter__c</fullName>
    <label>Total Travel With Home After</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>