unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalTravelTimeFromHomebaseBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalTravelTimeFromHomebaseBefore__c</fullName>
    <label>Travel Time from Homebase Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>