unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalTravelTimeToHomebaseAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalTravelTimeToHomebaseAfter__c</fullName>
    <label>Travel Time to Homebase After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>