unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalWorkTime__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalWorkTime__c</fullName>
    <label>Duration of All Appointments</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>