unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TravelTimeOnTheResourcesExpenseAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__TravelTimeOnTheResourcesExpenseAfter__c</fullName>
    <label>Travel Time at Resource’s Expense After</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>