unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TravelTimeOnTheResourcesExpenseBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__TravelTimeOnTheResourcesExpenseBefore__c</fullName>
    <label>Travel Time at Resource’s Expense Before</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>