unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__UnscheduledServicesLimitedAvailability__c.field-meta.xml
<CustomField>
    <fullName>FSL__UnscheduledServicesLimitedAvailability__c</fullName>
    <label>Unscheduled Services Ltd Availability</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>