unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__UnscheduledServicesRuleViolation__c.field-meta.xml
<CustomField>
    <fullName>FSL__UnscheduledServicesRuleViolation__c</fullName>
    <label>Unscheduled Services Rule Violation</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>