unpackaged/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__UtilizationTotalBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__UtilizationTotalBefore__c</fullName>
    <label>Utilization Total Before</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>